[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/towerDefense_tile246.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/laserLarge_002.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/impactMetal_000.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 14 )

[node name="player" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 11, 0 )

[node name="attackCooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="playerGotHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="timeout" from="attackCooldown" to="." method="_on_attackCooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
